--- a/creat/src/App.css
+++ b/creat/src/App.css
@@ -44,3 +44,108 @@
     transform: translateY(0px);
   }
 }
+
+img {
+  width: 120px;
+}
+
+.navbar{
+  width: calc(100vw - 2x);
+  height: 66px;
+  background-color: white;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border: 1px solid #eceff1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.navbar h1{
+  color: #0052ff;
+  float: left;
+  padding-left: 20px;
+  font-size: 28px;
+}
+.navbar ul{
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  float: right;
+  width: 200px;
+  justify-content: space-around;
+  margin-right: 50px;
+}
+.navbar button{
+  background-color: #0052ff;
+  color: white;
+  width: 100px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  border: 2px solid #0052ff;
+  outline: none;
+}
+.navbar button:hover{
+  background-color: white;
+  color: #0052ff;
+  border: 2px solid #0052ff;
+  transition: 200ms;
+}
+.navbar button:focus{
+  background-color: white;
+  color: #0052ff;
+  border: 2px solid #0052ff;
+  transition: 200ms;
+}
+.navbar .container-menu{
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  padding-right: 20px;
+}
+.ppop {
+  display: flex;
+  flex-direction: row;
+}
+.navbar li a{
+  text-decoration: none;
+  color: #0052ff;
+}
+
+.navbar li a:hover, .focus{
+  border-bottom: 3px solid #0052ff;
+  transition: 200ms;
+  color: #0052ff;
+  padding-bottom: 5px;
+}
+
+.selectName{
+  color: black;
+}
+
+.selectName div{
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+
+.reload{
+  animation: 10s ease-in rotate infinite;
+}
+
+.backgroundGrey{
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  background-color: #00000060;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
